[gd_scene load_steps=19 format=3 uid="uid://v6exl5r4e3h0"]

[ext_resource type="Script" path="res://scenes/objects/vampire_enemy.gd" id="1_5ibb0"]
[ext_resource type="PackedScene" uid="uid://y2nxi2gchher" path="res://scenes/objects/bat_enemy.tscn" id="2_rvakp"]
[ext_resource type="Texture2D" uid="uid://c5q17pq3y1iad" path="res://assets/vampire_spawning.png" id="3_wida1"]
[ext_resource type="Texture2D" uid="uid://bipc6ffb852gr" path="res://assets/vampire_dying.png" id="4_kd210"]
[ext_resource type="Texture2D" uid="uid://c8yfrblrckkyr" path="res://assets/vampire_walking.png" id="5_8bdh0"]
[ext_resource type="PackedScene" uid="uid://mj6tmejhq2jn" path="res://components/attack_range_component.tscn" id="5_bq330"]
[ext_resource type="PackedScene" uid="uid://do3w40jold7fh" path="res://components/velocity_component.tscn" id="6_2hrso"]
[ext_resource type="PackedScene" uid="uid://dghe6tn3spd65" path="res://components/health_component.tscn" id="7_0oik3"]
[ext_resource type="PackedScene" uid="uid://dnb78nk8mopm5" path="res://components/hurtbox_component.tscn" id="8_0ijpq"]
[ext_resource type="PackedScene" uid="uid://csyl1r2163i3w" path="res://components/hitbox_component.tscn" id="9_dq7tv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2j6p3"]
size = Vector2(8, 15)

[sub_resource type="Animation" id="Animation_sasvt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_wida1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxComponent/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HurtboxComponent/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_64rea"]
resource_name = "attacking"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_wida1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.433333, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.866667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finished_attacking"
}]
}

[sub_resource type="Animation" id="Animation_0ilg2"]
resource_name = "dying"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_kd210")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxComponent/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HurtboxComponent/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.566667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finished_dying"
}]
}

[sub_resource type="Animation" id="Animation_uwrb2"]
resource_name = "walking"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:texture")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_8bdh0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:frame")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 2.07053, 0.659754),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_18lp3"]
_data = {
"RESET": SubResource("Animation_sasvt"),
"attacking": SubResource("Animation_64rea"),
"dying": SubResource("Animation_0ilg2"),
"walking": SubResource("Animation_uwrb2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v6ysw"]
size = Vector2(8, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ty4ar"]
size = Vector2(8, 15)

[node name="VampireEnemy" type="CharacterBody2D"]
z_index = 10
script = ExtResource("1_5ibb0")
bat_scene = ExtResource("2_rvakp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0.5)
shape = SubResource("RectangleShape2D_2j6p3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_18lp3")
}

[node name="AttackRangeComponent" parent="." instance=ExtResource("5_bq330")]
attack_range = 96.0

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("3_wida1")
hframes = 4

[node name="SpawnSpot" type="Node2D" parent="Visuals"]
position = Vector2(14, 0)

[node name="VelocityComponent" parent="." instance=ExtResource("6_2hrso")]
max_speed = 20
acceleration = 20.0

[node name="HealthComponent" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("7_0oik3")]
max_health = 12.0
sprite = NodePath("../Visuals/Sprite2D")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("8_0ijpq")]
collision_layer = 0
collision_mask = 4
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(-1, 0.5)
shape = SubResource("RectangleShape2D_v6ysw")

[node name="HitboxComponent" parent="." instance=ExtResource("9_dq7tv")]
collision_layer = 2
damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(-1, 0.5)
shape = SubResource("RectangleShape2D_ty4ar")
